[package]
authors = ["Cytosine2020", "victoryang00"]
categories = ["heterogenous", "offload"]
edition = "2021"
keywords = ["jit", "compiler", "wasm", "binary-offload"]
license = "MIT"
name = "doublejit_vm"
version = "0.1.0"
[dependencies]
bytemuck = "1.9.1"
getrandom = {version = "0.2", features = ["js"]}
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.30"
# wasmer = {git = "https://github.com/Multi-V-VM/wasmer"}
wasmer = "4.2.5"
zero = "0.1.2"
wasmer-compiler-cranelift = "4.2.5"
[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "doublejit-runner"

[package.metadata.docs.rs]
all-features = true
