[package]
authors = ["Cytosine2020", "victoryang00"]
categories = ["heterogenous", "offload"]
edition = "2021"
keywords = ["jit", "compiler", "wasm", "binary-offload"]
license = "MIT"
name = "doublejit_vm"
version = "0.1.0"
[dependencies]
bytemuck = "1.9.1"
getrandom = "0.3.4"
wasm-bindgen = "0.2.104"
wasm-bindgen-test = "0.3.54"
# wasmer = {git = "https://github.com/Multi-V-VM/wasmer"}
wasmer = "6.1.0"
zero = "0.1.2"
wasmer-compiler-cranelift = "6.1.0"
wasmer-compiler-singlepass = "6.1.0"
wasmer-wasix = "0.601.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "doublejit-runner"

[[example]]
name = "cache_usage"

[[example]]
name = "perf_demo"

[package.metadata.docs.rs]
all-features = true
