[package]
name = "doublejit-vm-fuzz"
version = "0.0.1"
authors = ["Yiwei Yang <victoryang00@ucsc.edu>"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.10"
bytes = "1.4.0"
doublejit_vm = { path = ".." }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "asm"
path = "fuzz_targets/asm.rs"
test = false
doc = false

[[bin]]
name = "vector_instructions"
path = "fuzz_targets/vector_instructions.rs"
test = false
doc = false

[[bin]]
name = "instruction_stream"
path = "fuzz_targets/instruction_stream.rs"
test = false
doc = false